--- a/Changes
+++ b/Changes
@@ -3,3 +3,6 @@ Revision history for Module-Build-Database
 0.28    Thu Aug 16 12:50:42 EDT 2012
         First release
 
+0.29    Fri Aug 17 10:12:47 EDT 2012
+        Improved SQLite support.
+
