Import of BDUGGAN/Module-Build-Database-0.38 from CPAN.
gitpan-cpan-distribution: Module-Build-Database
gitpan-cpan-version:      0.38
gitpan-cpan-path:         BDUGGAN/Module-Build-Database-0.38.tar.gz
gitpan-cpan-author:       BDUGGAN
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -32,3 +32,7 @@ Revision history for Module-Build-Database
 
 0.37   Tue Oct 16 14:58:56 EDT 2012
        dbplant fixes
+
+0.38   Tue Oct 16 15:20:07 EDT 2012
+       fix for --install_path (gollis)
+
