--- a/Changes
+++ b/Changes
@@ -1,38 +1,41 @@
 Revision history for Module-Build-Database
 
-0.28    Thu Aug 16 12:50:42 EDT 2012
-        First release.
+0.39   Fri Oct 26 09:52:24 EDT 2012
+       no silent_mode in postgres 9.2 (gollis)
 
-0.29    Fri Aug 17 10:12:47 EDT 2012
-        Improved SQLite support.
+0.38   Tue Oct 16 15:20:07 EDT 2012
+       fix for --install_path (gollis)
 
-0.30    Sat Aug 18 19:05:16 EDT 2012
-        Improved tests.
+0.37   Tue Oct 16 14:58:56 EDT 2012
+       dbplant fixes
+
+0.36   Fri Sep 21 12:03:24 EDT 2012
+       dbplant
+       strip schema name in alter statements
+
+0.35   Wed Sep 12 12:06:28 EDT 2012
+       Use pg_ctl instead of postgres executable.
+
+0.34   Wed Sep 12 08:05:37 EDT 2012
+       Skip tests when run as root.
+
+0.33   Mon Aug 27 10:52:34 EDT 2012
+       Improved prerequisite list.
+
+0.32   Wed Aug 22 10:40:06 EDT 2012
+       More test improvements.
 
 0.31    Mon Aug 20 17:09:07 EDT 2012
         Check for unix domain socket instead
         of using postgres log to see if the
         server has started.
 
-0.32   Wed Aug 22 10:40:06 EDT 2012
-       More test improvements.
+0.30    Sat Aug 18 19:05:16 EDT 2012
+        Improved tests.
 
-0.33   Mon Aug 27 10:52:34 EDT 2012
-       Improved prerequisite list.
+0.29    Fri Aug 17 10:12:47 EDT 2012
+        Improved SQLite support.
 
-0.34   Wed Sep 12 08:05:37 EDT 2012
-       Skip tests when run as root.
-
-0.35   Wed Sep 12 12:06:28 EDT 2012
-       Use pg_ctl instead of postgres executable.
-
-0.36   Fri Sep 21 12:03:24 EDT 2012
-       dbplant
-       strip schema name in alter statements
-
-0.37   Tue Oct 16 14:58:56 EDT 2012
-       dbplant fixes
-
-0.38   Tue Oct 16 15:20:07 EDT 2012
-       fix for --install_path (gollis)
+0.28    Thu Aug 16 12:50:42 EDT 2012
+        First release.
 
