--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Module-Build-Database
 
+0.46   Tue Jun 25 12:04:20 EDT 2013
+       put it back (gollis)
+
 0.45   Tue Jun 25 07:51:08 EDT 2013
        removed use of File::Which
 
