--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Module-Build-Database
 
+0.48   Tue Jul 30 08:27:25 EDT 2013
+       Languages option for postgres (gollis)
+
 0.47   Fri Jul 12 09:15:20 EDT 2013
        Renamed post_initdb to after_create,
        and run it for a fresh install.
