Import of BDUGGAN/Module-Build-Database-0.49 from CPAN.
gitpan-cpan-distribution: Module-Build-Database
gitpan-cpan-version:      0.49
gitpan-cpan-path:         BDUGGAN/Module-Build-Database-0.49.tar.gz
gitpan-cpan-author:       BDUGGAN
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Module-Build-Database
 
+0.49   Sat Aug 17 12:35:08 EDT 2013
+       plperl, multiple schemas, docs (gollis)
+
 0.48   Tue Jul 30 08:27:25 EDT 2013
        Languages option for postgres (gollis)
 
