--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Module-Build-Database
 
+0.50   Sun Aug 25 08:34:08 EDT 2013
+       Updated min perl version
+
 0.49   Sat Aug 17 12:35:08 EDT 2013
        plperl, multiple schemas, docs (gollis)
 
