--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Module-Build-Database
 
+0.53   Mon Jun  9 11:13:42 EDT 2014
+       scratch database options (gollis)
+
 0.52   Thu May 29 12:27:59 MDT 2014
        Fixed bug from last release.
 
