Import of BDUGGAN/Module-Build-Database-0.54 from CPAN.
gitpan-cpan-distribution: Module-Build-Database
gitpan-cpan-version:      0.54
gitpan-cpan-path:         BDUGGAN/Module-Build-Database-0.54.tar.gz
gitpan-cpan-author:       BDUGGAN
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Module-Build-Database
 
+0.54   Sun Oct 19 15:32:25 EDT 2014
+       Made dbdist use base_data.sql
+
 0.53   Mon Jun  9 11:13:42 EDT 2014
        scratch database options (gollis)
 
